--- a/ShopNow/UserApp/templates/users.html
+++ b/ShopNow/UserApp/templates/users.html
@@ -6,28 +6,47 @@
     <title>Registered Users</title>
 </head>
 <body>
+    
     <hr>
     {% if  data_reteived is False %}
     <p>{{massage}}</p>
     <hr>
     {% else %}
-    <table>
-        <tr>
-            <th>ID: </th>
-            <th>username: </th>
-            <th>Email: </th>
-            <td>
-        </tr>
+        {% if single is True %}
+        <table>
+
+            <tr>
+                <th>ID: </th><br>
+                <th>username: </th><br>
+                <th>Email: </th><br>
+                <td>
+            </tr>
+            <tr>
+                <td>{{response.id}}</td>
+                <td>{{response.username}}</td>
+                <td>{{response.email}}</td>
+            </tr>
         
-        {% for user in response %}
-        <tr>
-            <td>{{user.id}}</td>
-            <td>{{user.username}}</td>
-            <td>{{user.email}}</td>
-           
-        </tr>
-        {% endfor %}
-    </table>
+        </table>
+        {% else %}
+        <table>
+            <tr>
+                <th>ID: </th>
+                <th>username: </th>
+                <th>Email: </th>
+                <td>
+            </tr>
+            {% for user in response %}
+            <tr>
+                <td>{{user.id}}</td>
+                <td>{{user.username}}</td>
+                <td>{{user.email}}</td>
+            
+            </tr>
+            {% endfor %}
+        
+        </table>
+        {% endif %}
     {% endif %}
 
 </body>
