--- a/ShopNow/UserApp/templates/admin_options.html
+++ b/ShopNow/UserApp/templates/admin_options.html
@@ -6,22 +6,20 @@
         
         <!-- Bootstrap JS (optional, for any Bootstrap components that require JS like modals) -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <title>Home</title>
+        <title>Admin-Home</title>
       </head>
       
 <body>
  
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Home</a>
+    <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="/api/register_new/">Register<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/api/login_user/">Login</a>
-        <a class="nav-item nav-link" href="/api/single_user/{{user_id}}">User Profile</a>
-        <a class="nav-item nav-link " href="/api/admin/">Admin</a>
+        <a class="nav-item nav-link" href="/api/single_user/{{user_id}}">Admin Profile</a>
+        <a class="nav-item nav-link" href="/api/all_users/">Registered Users</a>
       </div>
     </div>
   </nav>
