--- a/ShopNow/UserApp/templates/updateUser.html
+++ b/ShopNow/UserApp/templates/updateUser.html
@@ -3,38 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>register</title>
+    <title>Update User</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
         <header style="background-color: rgb(6, 139, 51);height: 7vh;font-weight: bolder;
-                       display: flex;justify-content: center;align-items: center;">Register User</header>
+                       display: flex;justify-content: center;align-items: center;">Update User</header>
          <div style="display: flex; justify-content: center;">
         <div style="box-shadow: 7px 4px 10px rgba(5, 5, 5, 0);padding: 20px; border-radius: 8px; background-color: #20afb4; width: 800px;height: 75vh;">
-          <form method="post">
+     
+            <form method="post">
             {% csrf_token %}
             <div class="form-group">
               <label for="uname">Please Enter UserName:</label>
-              <input type="text" name="username" required placeholder="cureMd" id="uname" class="form-control">
+              <input type="text" name="username" required placeholder="cureMd" id="uname" class="form-control" value="{{response.username}}">
             </div>
             <div class="form-group">
-              <label for="exampleInputmail">Please Enter your Email</label>
-              <input type="email" class="form-control" id="exampleInputmail" name="email" value="{{response.email}}">
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" name="password">
+                <label for="exampleInputmail">Please Enter your Email</label>
+                <input type="email" class="form-control" required id="exampleInputmail" name="email" value="{{response.email}}">
             </div>
            
             <div class="form-group">
-                <label for="exampleInPas2">Confirm Password</label>
-                <input type="password" class="form-control" id="exampleInPas2" name="confirm_password">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" required id="exampleInputPassword1" name="password" value="{{response.password}}">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword2">Confirm Password</label>
+                <input type="password" class="form-control" required id="exampleInputPassword2" name="confirm_password" value="{{response.confirm_password}}">
             </div>
             <hr>
             {{massage}}
+            {% if login is True %}
+            <button type="button" class="btn btn-warning" onclick="window.location.href='/api/login_user/'">Login First</button>
+            {% endif %}
             <hr>
-            <button type="button" class="btn btn-primary btn-block" onclick="window.location.href='/api/home/'">Home</button>
-            <button type="submit" class="btn btn-primary btn-block">Submit</button>
+            <button type="submit" class="btn btn-primary btn-block" onclick="window.location.href='/api/update/{{ response.id }}'">Update</button>
     </form>
     </div>
     <footer style="background-color: rgb(18, 78, 2);height: 7vh;font-weight:bolder;position: fixed;bottom: 0;
