--- a/ShopNow/UserApp/templates/users.html
+++ b/ShopNow/UserApp/templates/users.html
@@ -10,61 +10,83 @@
     
  
     {% if  data_reteived is False %}
-    <header style="background-color: rgb(6, 139, 51); height: 7vh; font-weight: bolder; 
-                   display: flex; justify-content: space-between; align-items: center; padding: 0 20px;">
-                {{ massage }} <!-- Assuming 'message' is what you meant -->
-                <button type="button" class="btn btn-danger" onclick="window.location.href='/api/home/'" style="margin-left: 5px;">Home</button>
-                <button type="button" class="btn btn-danger" onclick="window.location.href='/api/login_user/'">
-                Login First
-               </button>
+    <header style="background-color: rgb(6, 139, 51); height: 8vh; font-weight: bolder; 
+                   display: flex; justify-content: center; align-items: center; padding: 10px;">
+                {{ massage }} 
                </header>
 
     {% else %}
-    
+        
         {% if single is True %}
-       <nav>
+       <!-- <nav>
         <button type="button" class="btn btn-warning" onclick="window.location.href='/api/home/'">Home</button>
         <button type="button" class="btn btn-info" onclick="window.location.href='#'">Cart</button>
-       </nav>
+       </nav> -->
+       <header style="background-color: rgb(6, 139, 51);height: 7vh;font-weight: bolder;
+       display: flex;justify-content: center;align-items: center;">
+      <h1>User Profile</h1>
+      <button type="button" class="btn btn-info" onclick="window.location.href='/api/home/'" style="margin-left: 72%;">Home</button>
+      </header>
+    
         <table class="table table-striped table-hover table-bordered">
             <thead class="table-dark">
               <tr>
-                <th scope="col">ID :</th>
-                <th scope="col">username :</th>
-                <th scope="col">Email :</th>
+                <th >ID :</th>
+                <th >username :</th>
+                <th >Email :</th>
+                <th>Order History</th>
+                <th >Update</th>
+                <th>Delete</th>
               </tr>
             </thead>
             <tbody>
+           
               <tr>
                 <td>{{response.id}}</td>
                 <td>{{response.username}}</td>
                 <td>{{response.email}}</td>
-                <button type="button" class="btn btn-danger" onclick="window.location.href='/api/update/'">Update</button>
-                <button type="button" class="btn btn-warning" onclick="window.location.href='/api/delete/'">Delete</button>
-
+                {% if orderror is True %}
+                <td>{{orders}}</td>
+                {% else %}
+                <td>              
+                {% for order in orders %}
+                <li>{{order}}</li>
+                {% endfor %}
+                </td>
+                {% endif %}
+                <td><button type="button" class="btn btn-warning" onclick="window.location.href='/api/update/{{ response.id }}'">Update</button></td>
+                <td><button type="button" class="btn btn-danger" onclick="window.location.href='/api/delete/{{ response.id }}'">Delete</button>
+                </td>
               </tr>
+              <tr>{{ massage }}</tr>
             </tbody>
           </table>
         
         {% else %}
         <header style="background-color: rgb(6, 139, 51);height: 7vh;font-weight: bolder;
-                       display: flex;justify-content: center;align-items: center;">Users Profiles</header>
+                       display: flex;justify-content: center;align-items: center;">
+                      <h1>Users Profiles</h1>
+                      <button type="button" class="btn btn-info" onclick="window.location.href='/api/home/'" style="margin-left: 72%;">Home</button>
+                      </header>
         <table class="table table-striped table-hover table-bordered">
             <thead class="table-dark">
-              <tr>
-                <th scope="col">ID :</th>
-                <th scope="col">username :</th>
-                <th scope="col">Email :</th>
+              <tr scope="row">
+                <th >ID :</th>
+                <th >username :</th>
+                <th >Email :</th>
+                <th >Update</th>
+                <th>Delete</th>
               </tr>
             </thead>
             <tbody>
                 {% for user in response %}
               <tr>
                 <td>{{user.id}}</td>
-                <td>{{user.username}}</td>
+                <td><a href="/api/single_user/{{user.id}}">{{user.username}}</a></td>
                 <td>{{user.email}}</td>
-                <button type="button" class="btn btn-danger" onclick="window.location.href='/api/update/'">Update</button>
-                <button type="button" class="btn btn-warning" onclick="window.location.href='/api/delete/'">Delete</button>
+                <td><button type="button" class="btn btn-danger" onclick="window.location.href='/api/update/{{user.id}}'">Update</button></td>
+                <td><button type="button" class="btn btn-warning" onclick="window.location.href='/api/delete/{{user.id}}'">Delete</button>
+                </td>
               </tr>
               {% endfor %}
             </tbody>
@@ -72,7 +94,10 @@
         {% endif %}
     {% endif %}
     <footer style="background-color: rgb(18, 78, 2);height: 7vh;font-weight:bolder;position: fixed;bottom: 0;
-                  width: 100%;z-index: 1000; display: flex;justify-content: center;align-items: center;">ShopNow Axim</footer>
+                  width: 100%;z-index: 1000; display: flex;justify-content: center;align-items: center;">
+                  <p>ShopNow Axim</p>
+                  <button type="button" class="btn btn-info" onclick="window.location.href='/api/home/'" style="margin-left: 10%;">Home</button>
+                </footer>
 
 </body>
 </html>
