add product,delete product pages are added

--- a/ShopNow/UserApp/templates/admin_options.html
+++ b/ShopNow/UserApp/templates/admin_options.html
@@ -20,6 +20,12 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/api/single_user/{{user_id}}">Admin Profile</a>
         <a class="nav-item nav-link" href="/api/all_users/">Registered Users</a>
+        <a class="nav-item nav-link " href="/api/add_product/">Add Product</a>
+        <a class="nav-item nav-link disabled" href="/api/all_users/">Discard Product</a>
+        <a class="nav-item nav-link disabled" href="/api/all_users/">Update Product</a>
+        <a class="nav-item nav-link " href="/api/listproduct/">List Product</a>
+        
+        <a class="nav-item nav-link disabled" href="/api//">Search Product</a>
       </div>
     </div>
   </nav>
