--- a/ShopNow/UserApp/templates/admin_options.html
+++ b/ShopNow/UserApp/templates/admin_options.html
@@ -12,7 +12,7 @@
 <body>
  
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="/api/home/">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -24,7 +24,6 @@
         <a class="nav-item nav-link disabled" href="/api/all_users/">Discard Product</a>
         <a class="nav-item nav-link disabled" href="/api/all_users/">Update Product</a>
         <a class="nav-item nav-link " href="/api/listproduct/">List Product</a>
-        
         <a class="nav-item nav-link disabled" href="/api//">Search Product</a>
       </div>
     </div>
