--- a/ShopNow/UserApp/templates/home.html
+++ b/ShopNow/UserApp/templates/home.html
@@ -22,6 +22,7 @@
         <a class="nav-item nav-link" href="/api/login_user/">Login</a>
         <a class="nav-item nav-link" href="/api/single_user/{{user_id}}">User Profile</a>
         <a class="nav-item nav-link " href="/api/admin/">Admin</a>
+        <a class="nav-item nav-link " href="/api/products_list_user/">Do shopping</a>
       </div>
     </div>
   </nav>
