applied changes in the order by adding one more model to save the records item history and reset the cart. also applied order history and a button to check the details of the order like items in it.On cart side made your_cart page that lists all the products in cart and cart is empty response when there is nothing in cart.

--- a/ShopNow/UserApp/templates/home.html
+++ b/ShopNow/UserApp/templates/home.html
@@ -18,11 +18,15 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="/api/register_new/">Register<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link active" href="/api/register_new/">Sign up</span></a>
         <a class="nav-item nav-link" href="/api/login_user/">Login</a>
+        {% if viewCart is True %}
         <a class="nav-item nav-link" href="/api/single_user/{{user_id}}">User Profile</a>
         <a class="nav-item nav-link " href="/api/admin/">Admin</a>
         <a class="nav-item nav-link " href="/api/products_list_user/">Do shopping</a>
+       
+        <a class="nav-item nav-link " href="/api/showCart/">Your Cart</a>
+        {% endif %}
       </div>
     </div>
   </nav>
