--- a/ShopNow/UserApp/templates/admin_options.html
+++ b/ShopNow/UserApp/templates/admin_options.html
@@ -25,6 +25,7 @@
         <a class="nav-item nav-link disabled" href="/api/all_users/">Update Product</a>
         <a class="nav-item nav-link " href="/api/listproduct/">List Product</a>
         <a class="nav-item nav-link disabled" href="/api//">Search Product</a>
+        <a class="nav-item nav-link " href="/api/orderHistory/">Order History</a>
       </div>
     </div>
   </nav>
