to push it changes in pull request

--- a/ShopNow/order/templates/orderedItems.html
+++ b/ShopNow/order/templates/orderedItems.html
@@ -24,7 +24,7 @@
 
             <table class="table table-bordered">
                 <thead>
-                    <tr><th>Order yb</th></tr>
+                    <tr><th>Order </th></tr>
                     <tr>
                         <th>Order id </th>
                         <th>Product </th>
