--- a/ShopNow/UserApp/templates/admin_options.html
+++ b/ShopNow/UserApp/templates/admin_options.html
@@ -10,7 +10,7 @@
       </head>
       
 <body>
- 
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/api/home/">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,8 +18,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/api/single_user/{{user_id}}">Admin Profile</a>
-        <a class="nav-item nav-link" href="/api/all_users/">Registered Users</a>
+        <a class="nav-item nav-link" href="/api/single_user/{{user_id}}?admin=True">Admin Profile</a>
+        <a class="nav-item nav-link" href="/api/all_users/?admin=True">Registered Users</a>
         <a class="nav-item nav-link " href="/api/add_product/">Add Product</a>
         <a class="nav-item nav-link disabled" href="/api/all_users/">Discard Product</a>
         <a class="nav-item nav-link disabled" href="/api/all_users/">Update Product</a>
