--- a/ShopNow/UserApp/templates/users.html
+++ b/ShopNow/UserApp/templates/users.html
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
 <body style="height: 100%;">
-    
+    {{admin}}
  
     {% if  data_reteived is False %}
     <header style="background-color: rgb(6, 139, 51); height: 8vh; font-weight: bolder; 
@@ -23,12 +23,16 @@
         <button type="button" class="btn btn-warning" onclick="window.location.href='/api/home/'">Home</button>
         <button type="button" class="btn btn-info" onclick="window.location.href='#'">Cart</button>
        </nav> -->
-       <header style="background-color: rgb(6, 139, 51);height: 7vh;font-weight: bolder;
+      <header style="background-color: rgb(6, 139, 51);height: 7vh;font-weight: bolder;
        display: flex;justify-content: center;align-items: center;">
       <h1>User Profile</h1>
+      {% if admin is True %}
+      <button type="button" class="btn btn-info" onclick="window.location.href='/api/admin_options/'" style="margin-left: 72%;">Admin-Home</button>
+      {% else %}
       <button type="button" class="btn btn-info" onclick="window.location.href='/api/home/'" style="margin-left: 72%;">Home</button>
-      </header>
-    
+      {% endif %}      
+       </header>
+
         <table class="table table-striped table-hover table-bordered">
             <thead class="table-dark">
               <tr>
@@ -67,8 +71,12 @@
         <header style="background-color: rgb(6, 139, 51);height: 7vh;font-weight: bolder;
                        display: flex;justify-content: center;align-items: center;">
                       <h1>Users Profiles</h1>
+                      {% if admin is True %}
+                      <button type="button" class="btn btn-info" onclick="window.location.href='/api/admin_options/'" style="margin-left: 72%;">Admin-Home</button>
+                      {% else %}
                       <button type="button" class="btn btn-info" onclick="window.location.href='/api/home/'" style="margin-left: 72%;">Home</button>
-                      </header>
+                      {% endif %}
+                    </header>
         <table class="table table-striped table-hover table-bordered">
             <thead class="table-dark">
               <tr scope="row">
@@ -97,7 +105,6 @@
     <footer style="background-color: rgb(18, 78, 2);height: 7vh;font-weight:bolder;position: fixed;bottom: 0;
                   width: 100%;z-index: 1000; display: flex;justify-content: center;align-items: center;">
                   <p>ShopNow Axim</p>
-                  <button type="button" class="btn btn-info" onclick="window.location.href='/api/home/'" style="margin-left: 10%;">Home</button>
                 </footer>
 
 </body>
