--- a/ShopNow/Cart/templates/your_Cart.html
+++ b/ShopNow/Cart/templates/your_Cart.html
@@ -59,7 +59,9 @@
         {% else %}
             <p>{{massage}}</p>
             <button style="background-color: rgb(26, 243, 124); color: white;" type="button" onclick="window.location.href='/api/products_list_user/'">Shop More</button>
-        {% endif %}
+            <button style="background-color: rgb(26, 243, 124); color: white;" type="button" onclick="window.location.href='/api/home/'">Go to Home</button>
+
+            {% endif %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
