--- a/ShopNow/order/templates/orderHistory.html
+++ b/ShopNow/order/templates/orderHistory.html
@@ -16,7 +16,12 @@
     </style>
 </head>
 <body>
-
+    <nav class="navbar navbar-expand-lg" style="background-color: #000; color: #fff;">
+        <a class="navbar-brand" href="/api/admin_options/" style="color: #fff; font-weight: bold;">Admin Home</a>
+        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </nav>
     <div class="container mt-5">
         {% if orders %}
             <table class="table table-bordered">
