added the django pagination, that shows buttons previous and next, and at last page it shows only previous and on first page it shows only next page,and handle other cases like this

--- a/ShopNow/UserApp/templates/home.html
+++ b/ShopNow/UserApp/templates/home.html
@@ -23,7 +23,7 @@
         {% if viewCart is True %}
         <a class="nav-item nav-link" href="/api/single_user/{{user_id}}">User Profile</a>
         <a class="nav-item nav-link " href="/api/admin/">Admin</a>
-        <a class="nav-item nav-link " href="/api/products_list_user/">Do shopping</a>
+        <a class="nav-item nav-link " href="/api/products_list_user/?page=1">Do shopping</a>
        
         <a class="nav-item nav-link " href="/api/showCart/">Your Cart</a>
         {% endif %}
