--- a/ShopNow/product/templates/products_list.html
+++ b/ShopNow/product/templates/products_list.html
@@ -65,7 +65,6 @@
                     </ul>
                 </div>
                 <i class="bi bi-cart cart-icon" onclick="window.location.href='/api/showCart/'" style="cursor: pointer; font-size: 24px;position: fixed;"></i>
-             
             </div>
         </div>
     </header>
@@ -99,7 +98,21 @@
             </div>
         </div>
     </div>
+
     {% endif %}
-    <footer style="background-color: rgb(18, 78, 2);height: 7vh;font-weight:bolder;position: fixed;bottom: 0;width: 100%;z-index: 1000;display: flex; justify-content: center;align-items: center;">ShopNow Axim</footer>
+
+    <footer style="background-color: rgb(18, 78, 2); padding: 5px; height: 7vh; font-weight: bolder; position: fixed; bottom: 0; width: 100%; z-index: 1000; display: flex; justify-content: space-between; align-items: center; padding-left: 20px; padding-right: 20px;">
+        <p>ShopNow Axim</p>
+        <div>
+            {% if prev %}
+                <button type="button" class="btn btn-info" onclick="window.location.href='?page={{ prev }}'">Previous</button>
+            {% endif %}
+            <span style="margin: 0 10px;">||</span>
+            {% if next %}
+                <button type="button" class="btn btn-info" onclick="window.location.href='?page={{ next }}'">Next</button>
+            {% endif %}
+        </div>
+    </footer>
+    
 </body>
 </html>
