adjusted the UserApp code according to pep 8 standards

--- a/ShopNow/UserApp/templates/admin_options.html
+++ b/ShopNow/UserApp/templates/admin_options.html
@@ -23,7 +23,7 @@
         <a class="nav-item nav-link " href="/api/add_product/">Add Product</a>
         <a class="nav-item nav-link disabled" href="/api/all_users/">Discard Product</a>
         <a class="nav-item nav-link disabled" href="/api/all_users/">Update Product</a>
-        <a class="nav-item nav-link " href="/api/listproduct/">List Product</a>
+        <a class="nav-item nav-link " href="/api/listproduct/?page=1">List Product</a>
         <a class="nav-item nav-link disabled" href="/api//">Search Product</a>
         <a class="nav-item nav-link " href="/api/orderHistory/">Order History</a>
       </div>
