--- a/ShopNow/product/templates/products_list.html
+++ b/ShopNow/product/templates/products_list.html
@@ -48,24 +48,24 @@
 <body>
     <header class="header-container">
         <div class="header-content d-flex justify-content-between align-items-center">
-         
-            <button type="button" class="btn btn-primary me-3" onclick="window.location.href='/api/home/'">Home</button>
-    
+            <div class="d-flex align-items-center">
+                <button type="button" class="btn btn-primary me-3" onclick="window.location.href='/api/home/'">Home</button>
+            </div>
             <p class="mb-0 me-3">Available Products</p>
-    
-            <div class="d-flex align-items-center" style="margin-right: 100px;">
-         
-                <div class="dropdown me-3">  
+            <form class="form-inline my-2 my-lg-0 d-flex" style="gap: 10px;" method="post" action="{% url 'searchView' %}?product=Yes">
+                {% csrf_token %}
+                <input name="product_name" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+            </form>
+                     <div class="dropdown me-3">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="priceSortDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                         Sort by Price
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="priceSortDropdown">
-                        <li><a class="dropdown-item" href="?sort=low_to_high">Low to High</a></li>
-                        <li><a class="dropdown-item" href="?sort=high_to_low">High to Low</a></li>
+                        <li><a class="dropdown-item" href="?page=1&sort=low_to_high">Low to High</a></li>
+                        <li><a class="dropdown-item" href="?page=1&sort=high_to_low">High to Low</a></li>
                     </ul>
                 </div>
-                <i class="bi bi-cart cart-icon" onclick="window.location.href='/api/showCart/'" style="cursor: pointer; font-size: 24px;position: fixed;"></i>
-            </div>
         </div>
     </header>
     <hr>
@@ -105,11 +105,11 @@
         <p>ShopNow Axim</p>
         <div>
             {% if prev %}
-                <button type="button" class="btn btn-info" onclick="window.location.href='?page={{ prev }}'">Previous</button>
+                <button type="button" class="btn btn-info" onclick="window.location.href='?sort={{sort}}&page={{ prev }}'">Previous</button>
             {% endif %}
             <span style="margin: 0 10px;">||</span>
             {% if next %}
-                <button type="button" class="btn btn-info" onclick="window.location.href='?page={{ next }}'">Next</button>
+                <button type="button" class="btn btn-info" onclick="window.location.href='?sort={{sort}}&page={{ next }}'">Next</button>
             {% endif %}
         </div>
     </footer>
