completed UserApp pep 8 standards

--- a/ShopNow/UserApp/templates/updateUser.html
+++ b/ShopNow/UserApp/templates/updateUser.html
@@ -22,7 +22,10 @@
                 <label for="exampleInputmail">Please Enter your Email</label>
                 <input type="email" class="form-control" required id="exampleInputmail" name="email" value="{{response.email}}">
             </div>
-           
+            <div class="form-group">
+              <label for="exampleInputAddress">Please Enter your Address</label>
+              <input type="text" class="form-control" id="exampleInputAddress" name="address" value="{{response.address}}">
+            </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" required id="exampleInputPassword1" name="password" value="{{response.password}}">
