--- a/ShopNow/UserApp/templates/users.html
+++ b/ShopNow/UserApp/templates/users.html
@@ -39,6 +39,7 @@
                 <th >ID :</th>
                 <th >username :</th>
                 <th >Email :</th>
+                <th>Address :</th>
                 <th>Order History</th>
                 <th >Update</th>
                 <th>Delete</th>
@@ -50,6 +51,7 @@
                 <td>{{response.id}}</td>
                 <td>{{response.username}}</td>
                 <td>{{response.email}}</td>
+                <td>{{response.address}}</td>
                 {% if orderror is True %}
                 <td>{{orders}}</td>
                 {% else %}
