--- a/ShopNow/UserApp/templates/registerUser.html
+++ b/ShopNow/UserApp/templates/registerUser.html
@@ -19,7 +19,11 @@
             </div>
             <div class="form-group">
               <label for="exampleInputmail">Please Enter your Email</label>
-              <input type="email" class="form-control" id="exampleInputmail" name="email" value="{{response.email}}">
+              <input type="email" class="form-control" id="exampleInputmail" name="email">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputAddress">Please Enter your Address</label>
+              <input type="text" class="form-control" id="exampleInputAddress" name="address">
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
