completed product App according to the  pep 8 standards

--- a/ShopNow/product/templates/singleSearchedProduct.html
+++ b/ShopNow/product/templates/singleSearchedProduct.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Searced Product</title>
+    <title>Searched Product admin</title>
 </head>
 <body>
     {% if massage %}
