--- a/ShopNow/order/templates/orderedItems.html
+++ b/ShopNow/order/templates/orderedItems.html
@@ -59,6 +59,7 @@
         {% else %}
             <p>{{massage}}</p>
         {% endif %}
+        <td><button type="button" onclick="window.location.href='/api/orderHistory/'">Go Back</button></td>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
