adjust the urls and updated the UserApp and product App as per instructions

--- a/ShopNow/product/Frontend/templates/add_product.html
+++ b/ShopNow/product/Frontend/templates/add_product.html
@@ -35,7 +35,7 @@
             <hr>
             <button type="submit" class="btn btn-primary btn-block">Submit</button>
             <button type="button" class="btn btn-primary btn-block" onclick="window.location.href='/api/home/'" style="margin: 10%;">Home</button>
-            <button type="button" class="btn btn-primary btn-block" onclick="window.location.href='/api/listproduct/'">List Products</button>
+            <button type="button" class="btn btn-primary btn-block" onclick="window.location.href='/api/listproduct/?page=1'">List Products</button>
            
     </form>
     </div>
