--- a/ShopNow/Cart/templates/your_Cart.html
+++ b/ShopNow/Cart/templates/your_Cart.html
@@ -54,11 +54,11 @@
 
             </table>
             <button style="background-color: rgb(26, 243, 124); color: white;" type="button" onclick="window.location.href='/api/placeOrder/{{cart_id}}'">Place Order</button>
-            <button style="background-color: rgb(26, 243, 124); color: white;" style="margin-left: 10px;" type="button" onclick="window.location.href='/api/products_list_user/'">Shop More</button>
+            <button style="background-color: rgb(26, 243, 124); color: white;" style="margin-left: 10px;" type="button" onclick="window.location.href='/api/products_list_user/?page=1'">Shop More</button>
             <hr>
         {% else %}
             <p>{{massage}}</p>
-            <button style="background-color: rgb(26, 243, 124); color: white;" type="button" onclick="window.location.href='/api/products_list_user/'">Shop More</button>
+            <button style="background-color: rgb(26, 243, 124); color: white;" type="button" onclick="window.location.href='/api/products_list_user/?page=1'">Shop More</button>
             <button style="background-color: rgb(26, 243, 124); color: white;" type="button" onclick="window.location.href='/api/home/'">Go to Home</button>
 
             {% endif %}
