--- a/ShopNow/product/Frontend/templates/listProduct.html
+++ b/ShopNow/product/Frontend/templates/listProduct.html
@@ -61,7 +61,7 @@
                             </ul>
                             <p class="card-text">{{ product.product_description }}</p>
                             <a href="#" class="btn btn-primary" onclick="window.location.href='/api/update_product/{{product.id}}'">Update</a>
-                            <a href="#" class="btn btn-primary" onclick="window.location.href='/api/deleteProduct/{{product.id}}'">Delete</a>
+                            <a href="#" class="btn btn-primary" onclick="window.location.href='/api/delete_product/{{product.id}}'">Delete</a>
                         </div>
                     </div>
                 </div>
