added google login

--- a/ShopNow/UserApp/FrontEnd/templates/registerUser.html
+++ b/ShopNow/UserApp/FrontEnd/templates/registerUser.html
@@ -39,6 +39,9 @@
             <hr>
             <button type="button" class="btn btn-primary btn-block" onclick="window.location.href='/api/home/'">Home</button>
             <button type="submit" class="btn btn-primary btn-block">Submit</button>
+            <hr>
+            <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
+            <hr>
     </form>
     </div>
     <footer style="background-color: rgb(18, 78, 2);height: 7vh;font-weight:bolder;position: fixed;bottom: 0;
