--- a/ShopNow/product/Frontend/templates/listProduct.html
+++ b/ShopNow/product/Frontend/templates/listProduct.html
@@ -41,7 +41,7 @@
     </header>
     <hr>
     {% if error is True %}
-    <p>{{massage}}</p>
+    <p>{{message}}</p>
     {% else %}
     <hr>
     
